--- a/meetings.html
+++ b/meetings.html
@@ -28,50 +28,6 @@
     <!-- Page Wrapper -->
     <div id="wrapper">
 
-        <!-- Agent Offline Reason Popup Model -->
-        <div class="agent-offline-status-model" id="offlineReasonModal">
-
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 form-popup">
-                <form action="#" class="form-container">
-                    <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 agent-offline-status-popup-heading">
-                            <h6>Set Offline</h6>
-
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <label>Please provide a suitable reason</label>
-                            <select>
-                              <option>Select </option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                            </select>
-
-                        </div>
-
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12" style="text-align: right; margin-top: 64px;">
-                            <button class="cancelBtn">Cancel</button>
-                            <button class="submitBtn">Submit</button>
-
-
-                        </div>
-                    </div>
-
-
-
-
-                </form>
-            </div>
-        </div>
-
 
 
         <!-- Sidebar -->
@@ -171,54 +127,55 @@
                     </ul>
 
                 </nav>
-                <!-- End of Topbar -->
+            </div>
+            <!-- End of Topbar -->
 
-                <!-- Begin Page Content -->
-                <div class="container-fluid">
-                    <div class="modal fade" id="agent-offline-reason-modal" tabindex="-1" role="dialog" aria-labelledby="agent_offline_reason_modal_label" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h6>Set Offline</h6>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="row">
+            <!-- Begin Page Content -->
+            <div class="container-fluid">
+                <div class="modal fade" id="agent-offline-reason-modal" tabindex="-1" role="dialog" aria-labelledby="agent_offline_reason_modal_label" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h6>Set Offline</h6>
+                            </div>
+                            <div class="modal-body">
+                                <div class="row">
 
-                                        <div class="col-12 mb-2">
-                                            <label>Please provide a suitable reason</label>
-                                            <select name="day" class="form-control select-dropdown-icon">
+                                    <div class="col-12 mb-2">
+                                        <label>Please provide a suitable reason</label>
+                                        <select name="day" class="form-control select-dropdown-icon">
                                                 <option>Select</option>
                                                 <option value="01">lorem ipsum</option>
                                                 <option value="02">lorem ipsum</option>
                                             </select>
-                                        </div>
+                                    </div>
 
-                                    </div>
                                 </div>
-                                <div class="modal-footer">
-                                    <div style="float: right;">
-                                        <button class="btn-close" type="button" data-dismiss="modal">Cancel</button>
-                                        <button class="btn-primary" type="button">Submit</button>
-                                    </div>
+                            </div>
+                            <div class="modal-footer">
+                                <div style="float: right;">
+                                    <button class="btn-close" type="button" data-dismiss="modal">Cancel</button>
+                                    <button class="btn-primary" type="button">Submit</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
-                <!-- /.container-fluid -->
 
             </div>
+            <!-- /.container-fluid -->
+
+
             <!-- End of Main Content -->
 
             <!-- Footer -->
-            <footer class="sticky-footer bg-white">
+            <!-- <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
                         <span>.</span>
                     </div>
                 </div>
-            </footer>
+            </footer> -->
             <!-- End of Footer -->
 
         </div>
