--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                                 <path d="M22.7758 5.85507H19.5864V12.1551H20.9356V9.65607H22.6419V8.48532H20.9356V7.02582H22.7731V5.85507" fill="white"/>
                                                 </svg></div>
 
-                                            <div style="width: 120px; display: inline-block;"><span id="custom-text-attach">No file chosen</span><br>
+                                            <div class="file-attachment-path"><span id="custom-text-attach">No file chosen</span><br>
                                                 <b id="click-to-view-text-attachment">Click to view</b></div>
 
 
