--- a/index.html
+++ b/index.html
@@ -190,15 +190,18 @@
                                     <div class="live-chat-unread-message-count">2</div>
                                 </div>
                             </div>
+                            <p class="mobile-display-no-chats-appear">
+                                Active customers appear here
+                            </p>
                         </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 py-2 px-0" style="height: calc(100vh - 3.375rem);">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 py-0 px-0 live-chat-mobile-chat-detail" style="height: calc(100vh - 3.375rem);">
                             <h4 class="live-chat-mobile-display">
                                 <div class="live-chat-customer-name">
                                     <div class="live-chat-mobile-display back-arrow">
                                         <img src="./img/mobile-back.svg" alt="Back arrow" id="live-chat-active-customers-opener">
                                     </div>
-                                    <img class="img-profile rounded-circle" src="img/undraw_profile_2.svg" width="32">
-                                    <span style="font-size: 20px; color: #0254D7; padding-left: 10px;">Shubham Sethia</span>
+                                    <img class="img-profile rounded-circle" src="img/undraw_profile_2.svg" width="45">
+                                    <span style="font-size: 22px; color: #4D4D4D; padding-left: 10px; font-weight: 500;">Shubham Sethia</span>
                                     <div class="dropdown no-arrow live-chat-mobile-display mobile-menu-dots">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -342,8 +345,12 @@
                                     </div>
                                 </div>
                                 <div class="live-chat-text-box-wrapper">
-                                    <div class="live-chat-text-box" role="text-area">
+                                    <div class="live-chat-text-box textarea-desktop" role="text-area">
                                         <textarea class="live-chat-text-area" placeholder="Start with '/' to select a Canned Response
+                                        " autofocus></textarea>
+                                    </div>
+                                    <div class="live-chat-text-box textarea-mobile" role="text-area">
+                                        <textarea class="live-chat-text-area" placeholder="Type a Message
                                         " autofocus></textarea>
                                     </div>
 
@@ -528,9 +535,9 @@
     <!-- End of Page Wrapper -->
 
     <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
+    <!-- <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
-    </a>
+    </a> -->
 
     <!-- Logout Modal-->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
