--- a/archives.html
+++ b/archives.html
@@ -176,7 +176,7 @@
 
                                         <div class="search-container">
                                             <form action="#">
-                                                <button type="submit"><img src="img/Vector-search.svg"></button>
+                                                <button type="submit"><img src="img/search-icon-mobile.svg"></button>
                                                 <input type="text" placeholder="Search" name="search">
 
                                             </form>
@@ -219,8 +219,8 @@
 
                                             <td role="cell">
                                                 <button data-toggle="modal" data-target="#admin-chat-history-Modal">
-                                                    <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg" >
-                                                    History</button>
+                                                    <!-- <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg" > -->
+                                                     Chat History</button>
                                             </td>
 
 
@@ -234,8 +234,8 @@
 
                                             <td role="cell">
                                                 <button data-toggle="modal" data-target="#admin-chat-history-Modal">
-                                                    <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg">
-                                                    History</button>
+                                                    <!-- <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg"> -->
+                                                    Chat History</button>
                                             </td>
 
 
@@ -249,8 +249,8 @@
 
                                             <td role="cell">
                                                 <button data-toggle="modal" data-target="#admin-chat-history-Modal">
-                                                    <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg">
-                                                    History</button>
+                                                    <!-- <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg"> -->
+                                                    Chat History</button>
                                             </td>
 
 
