--- a/Chatbot theme7/index.html
+++ b/Chatbot theme7/index.html
@@ -128,11 +128,11 @@
                     </div>
 
                 </div>
-                <div class="typing-indicator ">
+                <!-- <div class="typing-indicator ">
                     <div class="typing-indicator-loader">
                         Typing...
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="easychat-drop-down-container" onclick="click_dropdown(this)">
