--- a/Chatbot theme7/index.html
+++ b/Chatbot theme7/index.html
@@ -128,11 +128,12 @@
                     </div>
 
                 </div>
-                <!-- <div class="typing-indicator ">
-                    <div class="typing-indicator-loader">
-                        Typing...
-                    </div>
-                </div> -->
+                <div class="typing-indicator">
+                    Typing
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
 
 
                 <div class="easychat-drop-down-container" onclick="click_dropdown(this)">
